compiler/testData/cli/jvm/jvmRecordWrongTarget.out
compiler/testData/cli/jvm/jvmRecord.kt:1:1: error: using @JvmRecord is only allowed with -jvm-target 16 or later (or -jvm-target 15 with the -Xjvm-enable-preview flag enabled).
@JvmRecord
^^^^^^^^^^
compiler/testData/cli/jvm/jvmRecord.kt:2:6: error: cannot access 'Record' which is a supertype of 'MyRec'. Check your module classpath for missing or conflicting dependencies.
data class MyRec(val name: String)
     ^^^^^^^^^^^
compiler/testData/cli/jvm/jvmRecord.kt:2:18: error: cannot access 'Record' which is a supertype of 'MyRec'. Check your module classpath for missing or conflicting dependencies.
data class MyRec(val name: String)
                 ^^^^^^^^^^^^^^^^
COMPILATION_ERROR
